fix: z-index modal login

--- a/styles/components/_login-modal.scss
+++ b/styles/components/_login-modal.scss
@@ -15,6 +15,7 @@
         grid-area: title;
     }
     &__content {
+        z-index: 2900;
         display: none;
         grid-template-areas: "title title"
         "label-email label-email"
